# ssm2mqtt

./: .gitignore  LICENSE  README.md  discover.py  main.py  make_dist.sh  pyproject.toml
resources/: config.json  requirements.txt  ssm2mqtt.service
src/ssm2mqtt/: discover.py  main.py
