[project]
name = "ssm2mqtt"
version = "0.2.4"
description = "MQTT to Sesame 5 bridge for lock control and status reporting"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "aiomqtt>=2.5.0",
    "gomalock",
]

[tool.uv.sources]
gomalock = { git = "https://github.com/meronepy/gomalock.git", rev = "v1.0.0" }
