[project]
name = "ssm2mqtt"
version = "0.3.0"
description = "Sesame 5 to MQTT bridge for lock control and status reporting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt==3.0.0a1",
    "gomalock==1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "ruff>=0.15.12",
]
